# cockpit-api

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  REFACTORING.md  alembic.ini  deploy-api.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  test_user_role_simple.py
.github/: copilot-instructions.md
.github/workflows/: README.md  checks.yml  deploy-raspberry-pi.yml  deploy-to-production.yml  deploy.yml  test-and-deploy.yml  test-reusable.yml  test.yml
alembic/: env.py
alembic/versions/: 05eac51d9014_remove_api_keys_and_utils_from_features_.py  1230ffc57f64_seed_default_admin_user.py  1302584e8494_change_shopping_items_table_to_todo_.py  1a4a698287ce_remove_api_key_system.py  25109eb32f73_adding_permissions_related_tables.py  3a778cea0867_create_access_and_refresh_token_tables.py  4f4676dedb5d_add_vikunja_and_actual_budget_features.py  559981a05f16_remove_agent_service.py  5e8a7b23f91c_add_permission_seed_data.py  6cce1c565859_initial_tables.py  6cce1c565859_initialize_tables.py  7d2e4c9a8f1b_add_admin_api_key_with_permissions.py  8650ef3eeec7_remove_shared_feature_and_permissions.py  901cfdcb8a1d_create_agent_conversations_and_messages.py  9593044e866a_create_api_keys_table.py  a078aff9a677_add_initial_payment_methods.py  a078aff9a677_seed_initial_data.py  a1b2c3d4e5f6_seed_demo_users_projects_and_expenses.py  a1b2c3d4e5f7_add_redis_store_feature_and_permissions.py  a2b3c4d5e6f7_drop_deprecated_budget_and_todos_tables.py  a49bc23d4f1a_add_initial_admin_api_key.py  b147dd0b1522_assign_all_permissions_to_admin_users.py  b1a2c3d4e5f6_add_brain_feature_and_permissions.py  b2c3d4e5f6a7_add_oauth_tables.py  bbb7d9ec4395_add_general_project_for_existing_users.py  c3d4e5f6a7b8_assign_permissions_by_role.py  c6b968468f37_add_index_on_todo_items_project_id.py  cec583e3a506_rename_utils_feature_to_shared.py  d63603652eb0_create_user_roles_table.py  d6d81a0ff5fa_add_todo_project_ownership_and_.py  dbabd2c046b5_create_users_and_user_permissions_tables.py  e5be391de3fe_add_items_to_todoproject_table_and_set_.py  e9a1c3b2d4f5_fix_actions_and_permissions.py  f28374a12c5d_update_api_keys_table_structure.py  f2b3c4d5e6f7_update_features_from_enum.py  f53395e40357_create_shopping_items_table.py  f7106ccf1432_replace_category_todo_table_with_.py  f8f54e6ca6b7_add_utils_feature.py  f9c1d2e3f4a5_assign_all_permissions_to_admin_users.py
app/: database.py  main.py
docs/: UPSTREAM_APIS.md  actual-budget.openapi.json  update-upstream-docs.sh
scripts/: seed_redis_store.py
src/: database.py  main.py  models.py  permissions.py
src/auth/: cookie_dependencies.py  dependencies.py  jwt.py  jwt_blacklist.py  jwt_dependencies.py  password.py  permission_helpers.py  permissions.py
src/common/: dependencies.py  exceptions.py  models.py  utils.py
src/core/: config.py  database.py  scheduler.py  security.py
(+286 files in other folders)
