[project]
name = "cockpit-api"
version = "0.1.0"
description = ""
authors = [
    {name = "MarcinParda",email = "marcin98parda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.110.0)",
    "uvicorn[standard] (>=0.29.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "python-dotenv (>=1.0.0)",
    "psycopg2-binary (>=2.9.9)",
    "sqlalchemy[asyncio] (>=2.0.29)",
    "alembic (>=1.13.1)",
    "asyncpg (>=0.29.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]
name = "cockpit-api"
version = "0.1.0"
package-mode = false  # Add this line



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
