[project]
name = "cockpit-api"
version = "0.1.1"
description = ""
authors = [
    {name = "MarcinParda",email = "marcin98parda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.110.0)",
    "uvicorn[standard] (>=0.29.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "python-dotenv (>=1.0.0)",
    "psycopg2-binary (>=2.9.9)",
    "sqlalchemy[asyncio] (>=2.0.29)",
    "alembic[async] (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.29.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "bcrypt (==4.0.1)",
    "email-validator (>=2.0.0)",
    "apscheduler (==3.11.0)"
]

[tool.poetry]
name = "cockpit-api"
version = "0.1.0"
package-mode = false  # Add this line



[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.27.0"
types-python-jose = "^3.5.0.20250531"
mypy = "^1.17.0"
pytest-asyncio = "^1.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.12"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
